# grpc-kafka-poc

./: .gitignore  README.md
client/: Gemfile  README.md  payload_pb.rb  payload_services_pb.rb  test.rb
client/.bundle/: config
client/.bundle/ruby/2.6.0/cache/: googleapis-common-protos-types-1.11.0.gem
client/.bundle/ruby/2.6.0/extensions/-darwin-22/2.6.0/google-protobuf-3.23.4/: gem_make.out
client/.bundle/ruby/2.6.0/extensions/-darwin-22/2.6.0/google-protobuf-3.23.4/google/: protobuf_c.bundle
client/.bundle/ruby/2.6.0/extensions/universal-darwin-23/2.6.0/grpc-1.58.0/: gem_make.out
client/.bundle/ruby/2.6.0/gems/google-protobuf-3.23.4/ext/google/protobuf_c/: Makefile
client/.bundle/ruby/2.6.0/gems/grpc-1.58.0/src/ruby/ext/grpc/: Makefile  grpc_c.bundle
client/.bundle/ruby/2.6.0/specifications/: google-protobuf-3.23.4-arm64-darwin.gemspec  google-protobuf-3.23.4.gemspec  googleapis-common-protos-types-1.11.0.gemspec  grpc-1.58.0.gemspec  grpc-tools-1.60.0.gemspec
messaging-client/avant-msg-test/: app.py  consumer.ini  pyproject.toml
messaging-client/avant-msg-test/.history/: consumer_20230123153045.ini  pyproject_20230124084709.toml
server/: Dockerfile  README.md  api-key-TRLVFID3FJQ23BSH.txt  docker-compose.yml  main.py  messaging-client.ini  payload_pb2.py  payload_pb2_grpc.py  protobuf_to_dict.py  pyproject.toml
server/postgres/: Dockerfile  initdb.sh
server/protos/: payload.proto  request_consumer.py
